--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "mobile-detect": "^1.4.5",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-multi-carousel": "^2.6.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
